<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.rebecalang</groupId>
	<artifactId>modelchecker</artifactId>
	<version>3.1</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<springframework.version>6.1.14</springframework.version>
		<junit.jupiter.version>5.10.1</junit.jupiter.version>
		<org.apache.maven.plugins.surefire.version>3.2.2</org.apache.maven.plugins.surefire.version>
		<org.apache.maven.plugins.compiler.version>3.11.0</org.apache.maven.plugins.compiler.version>
		<org.projectlombok.version>1.18.30</org.projectlombok.version>
		<compilerversion>17</compilerversion>
	</properties>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>

<!--		<dependency>-->
<!--			<groupId>org.rebecalang</groupId>-->
<!--			<artifactId>compiler</artifactId>-->
<!--			<version>LATEST</version>-->
<!--		</dependency>-->

		<dependency>
			<groupId>com.esotericsoftware</groupId>
			<artifactId>kryo</artifactId>
			<version>5.5.0</version>
		</dependency>


		<!--		<dependency>-->
<!--			<groupId>org.rebecalang</groupId>-->
<!--			<artifactId>modeltransformer</artifactId>-->
<!--			<version>LATEST</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>github.com/rose-giant/Hybrid-Rebeca-Model-Transformer/releases/tag/rebecamodeltransformer</groupId>-->
<!--			<artifactId>modeltransformer</artifactId>-->
<!--			<version>LATEST</version>-->
<!--		</dependency>-->

		<dependency>
			<groupId>org.rebecalang</groupId>
			<artifactId>modeltransformer</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>org.rebecalang</groupId>
			<artifactId>compiler</artifactId>
			<version>2.21</version>
		</dependency>

		<dependency>
			<groupId>org.rebecalang</groupId>
			<artifactId>modeltransformer</artifactId>
			<version>1.9</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.20.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.20.0</version> <!-- or any recent stable version -->
		</dependency>
		<dependency>
			<groupId>com.lmax</groupId>
			<artifactId>disruptor</artifactId>
			<version>3.3.4</version>
		</dependency>

		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${org.projectlombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${springframework.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>${compilerversion}</release>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${org.projectlombok.version}</version>
						</path>
					</annotationProcessorPaths>
                    <source>21</source>
                    <target>21</target>
                </configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${org.apache.maven.plugins.surefire.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${org.apache.maven.plugins.surefire.version}</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<id>
				default
			</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${org.apache.maven.plugins.surefire.version}</version>
						<configuration>
							<useSystemClassLoader>false</useSystemClassLoader>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${org.apache.maven.plugins.compiler.version}</version>
						<configuration>
							<release>${compilerversion}</release>
							<annotationProcessorPaths>
								<path>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
									<version>${org.projectlombok.version}</version>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<id>
				executable
			</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${org.apache.maven.plugins.surefire.version}</version>
						<configuration>
							<useSystemClassLoader>false</useSystemClassLoader>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>${compilerversion}</release>
							<annotationProcessorPaths>
								<path>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
									<version>${org.projectlombok.version}</version>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.6.0</version>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<archive>
								<manifest>
									<mainClass>
										org.rebecalang.modelchecker.RebecaModelChecker</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
						<executions>
							<execution>
								<id>make-assembly</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>